Corrections in the cases added